# nighthawk-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.agent/: PLANS.md
.claude/: hooks.json  run_claude.sh  settings.json  settings.local.json  unset_envs.sh
.claude/rules/: coding.md  docs.md  promptfoo.md  src.md  tests.md
.claude/skills/radical-chat/: SKILL.md
.claude/skills/radical-plan/: PLANS.md  SKILL.md
.devcontainer/: Dockerfile.devcontainer  Dockerfile.litellm  devcontainer.json  docker-compose.yaml  litellm-config.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: AGENTS.md  README.md  api.md  coding-agent-backends.md  coding-agents.md  design.md  docstring-guide.md  executors.md  for-coding-agents.md  index.md  manual.md  natural-blocks.md  patterns.md  philosophy.ja.md  philosophy.md  practices.md  providers.md  pydantic-ai-providers.md  quickstart.md  roadmap.md  runtime-configuration.md  specification.md  tutorial.md  verification.md
docs/logfire/: claude-agent-sdk.md  concepts.md
evals/promptfoo/: promptfooconfig-agents.yaml  promptfooconfig-nano-sanity.yaml  promptfooconfig-prompt-ab.yaml  promptfooconfig-suffix-ab.yaml  promptfooconfig.yaml  provider.py  research-result.md
evals/promptfoo/assertions/: binding_value.py  outcome_kind.py  raise_message.py
evals/promptfoo/evidence/: 2026-03-26-baseline-prompt-ab.md  2026-03-26-baseline-regression.md  2026-03-26-baseline-suffix-ab.md  2026-04-27-runtime-prompt-optimization.md
evals/promptfoo/prompts/: eval_coding_agent.txt  eval_default.txt  eval_mutation_aware.txt  eval_sequenced.txt
evals/promptfoo/test_cases/: binding_operations.yaml  edge_cases.yaml  loop_outcomes.yaml  loop_outcomes_ja.yaml  multi_step.yaml  null_handling.yaml  outcome_kinds.yaml  tool_selection.yaml
src/: AGENTS.md
src/nighthawk/: __init__.py  agent.py  api.py  ast_transform.py  builtin_tools.py  claude_agent_sdk_model.py  configuration.py  context.py  core.py  decorator.py  dsl.py  environment.py  errors.py  executors.py  identifier_path.py  json_renderer.py  llm.py  natural_ast.py  openai_client.py  oversight.py  runtime.py  stringify.py  templates.py  testing.py  tools.py  ulid.py
src/nighthawk/backends/: __init__.py  _text_fallback.py  base.py  claude_agent_sdk.py  claude_code.py  claude_code_cli.py  claude_code_sdk.py  claude_code_settings.py  codex.py  codex_cli.py  mcp_boundary.py  mcp_server.py  text_projection.py  tool_bridge.py
src/nighthawk/execution/: context.py  contracts.py  environment.py  executors.py  llm.py  orchestrator.py  runtime.py
src/nighthawk/natural/: blocks.py  decorator.py  transform.py
src/nighthawk/resilience/: __init__.py  _budget.py  _circuit_breaker.py  _fallback.py  _retry.py  _timeout.py  _vote.py
src/nighthawk/runtime/: _user_content.py  async_bridge.py  environment.py  execution_context.py  prompt.py  runner.py  scoping.py  step_context.py  step_contract.py  step_executor.py  tool_calls.py
src/nighthawk/tools/: __init__.py  _tool_return_content.py  assignment.py  contracts.py  execution.py  mcp_boundary.py  provided.py  registry.py
tests/: AGENTS.md  conftest.py  test_agent_smoke.py  test_context.py  test_core.py  test_decorator_e2e.py  test_dsl.py  test_environment.py  test_llm.py  test_natural_ast.py  test_openai_client_smoke.py  test_readme_example.py  test_renderer.py  test_runtime.py  test_stringification.py  test_templates.py  test_testing.py  test_tools.py
tests/backends/: test_claude_code.py  test_claude_code_cli.py  test_claude_code_sdk.py  test_codex.py  test_codex_cli.py
tests/docs/: test_coding_agent_examples.py  test_docs_architecture.py  test_prompt_examples.py
tests/execution/: prompt_test_helpers.py  stub_executor.py  test_execution_outcome_prompt_fragment.py  test_globals_prompt.py  test_infer_binding_types.py  test_natural_block_ordering.py  test_natural_traceback.py  test_runtime.py  test_variables_prompt.py
tests/governance/: test_governance.py
tests/integration/: skip_helpers.py  test_carry_pattern.py  test_claude_agent_sdk_integration.py  test_claude_code_cli_integration.py  test_claude_code_integration.py  test_claude_code_sdk_integration.py  test_codex_cli_integration.py  test_codex_integration.py  test_import.py  test_journal_pattern.py  test_llm_integration.py
tests/integration/agent_working_directory/skills/hoge/: SKILL.md
tests/integration/agent_working_directory/skills/test/: SKILL.md
tests/integration/claude_working_directory/.claude/skills/hoge/: SKILL.md
tests/natural/: test_blocks.py
tests/public/: test_public_api.py  test_readme_example.py  test_usage_meter.py
tests/resilience/: test_budget.py  test_circuit_breaker.py  test_composition.py  test_fallback.py  test_retry.py  test_timeout.py  test_vote.py
tests/tools/: test_assignment_async.py  test_contract.py  test_contracts.py  test_multimodal_helpers.py  test_provided_async.py  test_registry.py  test_tool_boundary.py
