[project]
name = "nighthawk-python"
version = "0.4.0"
description = "An experimental Python library that embeds Natural blocks inside Python functions and executes them using an LLM."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Kurusugawa Computer Inc.", email = "oss@kurusugawa.jp"},
]
keywords = ["llm", "natural-language", "interoperability", "pydantic-ai", "embedded-dsl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "headson>=0.16.1",
  "pydantic>=2",
  "pydantic-ai-slim>=1.68",
  "pyyaml>=6",
  "tiktoken>=0.12",
]

[project.urls]
Repository = "https://github.com/kurusugawa-computer/nighthawk-python"
Documentation = "https://kurusugawa-computer.github.io/nighthawk-python/"
Changelog = "https://github.com/kurusugawa-computer/nighthawk-python/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/kurusugawa-computer/nighthawk-python/issues"

[project.optional-dependencies]
claude-code-sdk = [
  "claude-agent-sdk==0.1.48",
]
claude-code-cli = [
  "mcp>=1.26",
]
codex = [
  "mcp>=1.26",
]

[dependency-groups]
dev = [
  "logfire>=4",
  "pydantic-ai-slim[openai]>=1.68",
  "pyright>=1.1",
  "pytest>=9",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9",
  "mkdocstrings[python]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nighthawk"]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["nighthawk"]
