[project]
name = "nighthawk-python"
version = "0.11.0"
description = "A Python library where Python controls flow and LLMs or coding agents reason within constrained Natural blocks."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Kurusugawa Computer Inc.", email = "oss@kurusugawa.jp"},
]
keywords = ["llm", "ai", "natural-language", "dsl", "pydantic-ai", "openai", "anthropic", "structured-output", "agent", "prompt-engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "headson>=0.16.1",
  "pydantic>=2.13.3",
  "pydantic-ai-slim>=1.87.0",
  "pyyaml>=6.0.3",
  "tenacity>=9.1.4",
  "tiktoken>=0.12.0",
]

[project.urls]
Repository = "https://github.com/kurusugawa-computer/nighthawk-python"
Documentation = "https://kurusugawa-computer.github.io/nighthawk-python/"
Changelog = "https://github.com/kurusugawa-computer/nighthawk-python/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/kurusugawa-computer/nighthawk-python/issues"

[project.optional-dependencies]
claude-code-sdk = [
  "claude-agent-sdk==0.1.48",
]
claude-code-cli = [
  "mcp>=1.27.0",
]
codex = [
  "mcp>=1.27.0",
]

[dependency-groups]
dev = [
  "logfire>=4.32.1",
  "pydantic-ai-slim[openai]>=1.87.0",
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.12",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nighthawk"]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["nighthawk"]
